# newsbox

./: Cargo.toml  README.md  feeds.yml
src/: app.rs  input.rs  main.rs  model.rs  rss.rs  ui.rs
