
[package]
name = "newsbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
ratatui = "0.26"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rss = "2"
url = "2"
open = "5"
unicode-width = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
